<resources>
    <string name="app_name">Everyday Converter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="string_unit_converter">Unit converter</string>
    <string name="string_time">Time</string>
    <string name="string_length">Length</string>
    <string name="string_area">Area</string>
    <string name="string_volume">Volume</string>
    <string name="string_temperature">Temperature</string>
    <string name="string_temp">Temp.</string>
    <string name="string_speed">Speed</string>
    <string name="string_speed_short">Speed</string>
    <string name="string_weight">Weight</string>
    <string name="string_weight_short">Weight</string>
    <string name="string_storage">Data Storage</string>
    <string name="string_storage_short">Storage</string>
    <string name="string_conversion_table">Conversion table</string>
    <string name="string_unit_description">Unit information</string>
    <string name="string_settings">Settings</string>
    <string name="string_title_activity_info">Info</string>
    <string name="string_color_scheme">Color Scheme</string>
    <string name="string_communicate">Get in contact</string>
    <string name="string_blog">https://sebmerkt.github.io/everyday_converter.html</string>
    <string name="string_browser_err_msg1">No application can handle this request.</string>
    <string name="string_browser_err_msg2"> Please install a web browser</string>
    <string name="string_browser_info">Find info on the web</string>
    <string name="string_info">About</string>
    <string name="string_rate_this_app">Rate this app</string>
    <string name="string_info_title">Everyday Converter</string>
    <string name="string_app_info">
        <![CDATA[
            <head>
                <style>
                    h2 {
                        text-align: center;
                    }
                </style>
            </head>
            </br>
            <p>Contact: <a href="mailto:semerkt@gmail.com?Subject=Hello%20developer">semerkt@gmail.com</a></p>
            </br>
            <p>Version: 1.0.0</p>
            </br>
            <h3>Further information:</h3>
            <p>Wear OS version: 1.0.0</p>

        ]]>
    </string>
    <string name="string_kelvinwarning">Unit Kelvin is defined positive.</string>
    <string name="string_info_wearos_abbrev">
        <![CDATA[
            <head>
                <style>
                    h2 {
                        text-align: center;
                    }
                </style>
            </head>
            <h3>Information for Wear OS</h3>
            <p>Due to the limited screen size of the Wear OS application only abbreviated units can be displayed. Here you will find tables for each category of units where the full names of each unit is listed.</p>
            </br>
            <p>In the Android application for mobile phones and tablets the displayed units can be switched between full and abbreviated names. Check the <b>Settings</b> under <b>Unit conversion</b>.</p>
        ]]>
    </string>
    <string name="string_nanosecond">Nanosecond</string>
    <string name="string_microsecond">Microsecond</string>
    <string name="string_millisecond">Millisecond</string>
    <string name="string_second">Second</string>
    <string name="string_second_abbrev">s</string>
    <string name="string_minute">Minute</string>
    <string name="string_hour">Hour</string>
    <string name="string_day">Day</string>
    <string name="string_week">Week</string>
    <string name="string_month">Month</string>
    <string name="string_year">Year</string>
    <string name="string_nanometer">Nanometer</string>
    <string name="string_mircometer">Micrometer</string>
    <string name="string_millimeter">Millimeter</string>
    <string name="string_centimeter">Centimeter</string>
    <string name="string_meter">Meter</string>
    <string name="string_meter_abbrev">m</string>
    <string name="string_kilometer">Kilometer</string>
    <string name="string_mile">Mile</string>
    <string name="string_yard">Yard</string>
    <string name="string_foot">Foot</string>
    <string name="string_foot_abbrev">ft</string>
    <string name="string_inch">Inch</string>
    <string name="string_squaremeter">Square meter</string>
    <string name="string_squaremeter_abbrev">m\u00B2</string>
    <string name="string_squarekilometer">Square kilometer</string>
    <string name="string_squarecentimeter">Square centimeter</string>
    <string name="string_are">Are</string>
    <string name="string_hectare">Hectare</string>
    <string name="string_squareinch">Square inch</string>
    <string name="string_squarefoot">Square foot</string>
    <string name="string_squarefoot_abbrev">sq ft</string>
    <string name="string_squareyard">Square yard</string>
    <string name="string_acre">Acre</string>
    <string name="string_squaremile">Square mile</string>
    <string name="string_cubiccentimeter">Cubic centimeter</string>
    <string name="string_milliliter">Milliliter</string>
    <string name="string_liter">Liter</string>
    <string name="string_liter_abbrev">L</string>
    <string name="string_cubicmeter">Cubic meter</string>
    <string name="string_cubicinch">Cubic inch</string>
    <string name="string_cubicfoot">Cubic foot</string>
    <string name="string_cubicyard">Cubic yard</string>
    <string name="string_usliquidgallon">US liquid gallon</string>
    <string name="string_usliquidquart">US liquid quart</string>
    <string name="string_usliquidpint">US liquid pint</string>
    <string name="string_uslegalcup">US legal cup</string>
    <string name="string_usfluidounce">US fluid ounce</string>
    <string name="string_usfluidounce_abbrev">US fl oz</string>
    <string name="string_ustablespoon">US tablespoon</string>
    <string name="string_usteaspoon">Imperial teaspoon</string>
    <string name="string_imperialgallon">Imperial gallon</string>
    <string name="string_imperialquart">Imperial quart</string>
    <string name="string_imperialpint">Imperial pint</string>
    <string name="string_imperialcup">Imperial cup</string>
    <string name="string_imperialfluidounce">Imperial fluid ounce</string>
    <string name="string_imperialtablespoon">Imperial tablespoon</string>
    <string name="string_imperialteaspoon">Imperial teaspoon</string>
    <string name="string_kelvin">Kelvin</string>
    <string name="string_celsius">Celsius</string>
    <string name="string_fahrenheit">Fahrenheit</string>
    <string name="string_celsius_abbrev">\u00B0C</string>
    <string name="string_fahrenheit_abbrev">\u00B0F</string>
    <string name="string_mps">Meter per second</string>
    <string name="string_kmph">Kilometer per hour</string>
    <string name="string_kmph_abbrev">kph</string>
    <string name="string_fps">Foot per second</string>
    <string name="string_mph">Mile per hour</string>
    <string name="string_mph_abbrev">mph</string>
    <string name="string_kn">Knot</string>
    <string name="string_microgram">Microgram</string>
    <string name="string_milligram">Milligram</string>
    <string name="string_gram">Gram</string>
    <string name="string_kilogram">Kilogram</string>
    <string name="string_kilogram_abbrev">kg</string>
    <string name="string_metricton">Metric ton</string>
    <string name="string_ounce">Ounce</string>
    <string name="string_pound">Pound</string>
    <string name="string_pound_abbrev">lb</string>
    <string name="string_stone">Stone</string>
    <string name="string_uston">US ton</string>
    <string name="string_imperialton">Imperial ton</string>
    <string name="string_byte">Byte</string>
    <string name="string_kilobyte">Kilobyte</string>
    <string name="string_megabyte">Megabyte</string>
    <string name="string_megabyte_abbrev">MB</string>
    <string name="string_gigabyte">Gigabyte</string>
    <string name="string_terabyte">Terabyte</string>
    <string name="string_petabyte">Petabyte</string>
    <string name="string_bit">Bit</string>
    <string name="string_kilobit">Kilobit</string>
    <string name="string_megabit">Megabit</string>
    <string name="string_gigabit">Gigabit</string>
    <string name="string_terabit">Terabit</string>
    <string name="string_petabit">Petabit</string>
    <string name="string_length_text">
        <![CDATA[
            <head>
                <style>
                table, th, td {
                    border: 1px solid black;
                    border-collapse: collapse;
                }
                th, td {
                    padding: 15px;
                }
                td {
                    text-align: center;
                }
                table#t01 {
                    width: 100%;
                    background-color: #eee;
                }
                h2 {
                    text-align: center;
                }
                </style>
            </head>
            <h2>Units of Length</h2>
            <table style="width:100%" id="t01">
                <tr>
                    <th>Unit</th>
                    <th>Abbreviation</th>
                </tr>
                <tr>
                    <td>Nanometer</td>
                    <td>nm</td>
                </tr>
                <tr>
                    <td>Micrometer</td>
                    <td>\u00B5m</td>
                </tr>
                <tr>
                    <td>Millimeter</td>
                    <td>mm</td>
                </tr>
                <tr>
                    <td>Centimeter</td>
                    <td>cm</td>
                </tr>
                <tr>
                    <td>Meter</td>
                    <td>m</td>
                </tr>
                <tr>
                    <td>Kilometer</td>
                    <td>km</td>
                </tr>
                <tr>
                    <td>Inch</td>
                    <td>in</td>
                </tr>
                <tr>
                    <td>Foot</td>
                    <td>ft</td>
                </tr>
                <tr>
                    <td>Yard</td>
                    <td>yd</td>
                </tr>
                <tr>
                    <td>Mile</td>
                    <td>mi</td>
                </tr>
            </table>
        ]]>
    </string>
</resources>