<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_conversion_table"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/string_conversion_table" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/string_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_open_in_browser_black_24dp"
                android:title="@string/string_info" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/string_rate_this_app" />
        </menu>
    </item>

</menu>
